feat(dashboard): implement order risk forecast & period navigation toolbar
